Improve swagger api
